--- a/app/views/ddr/batch/batch_processor_run_mailer/send_notification.text.erb
+++ b/app/views/ddr/batch/batch_processor_run_mailer/send_notification.text.erb
@@ -12,9 +12,9 @@ Stopped at: <%= @batch.stop %>
 Status: <%= @batch.status %>
 Outcome: <%= @batch.outcome %>
 
-Objects in batch: <%= @batch.batch_objects.size %>
-Successfully processed: <%= @batch.success %>
-Processing failures: <%= @batch.failure %>
-Unprocessed: <%= @batch.batch_objects.size - @batch.success - @batch.failure %>
+Objects in batch: <%= @size %>
+Successfully processed: <%= @success %>
+Processing failures: <%= @handled - @success %>
+Unprocessed: <%= @size - @handled %>
 
 See attachment for details of batch run.
